# kit

./: .gitignore  COOKBOOK.md  Dockerfile  README.md  demo_test_file.py  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
benchmarks/: benchmark_ripgrep.py
clients/: README.md
clients/typescript/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  test-wrapper.js
clients/typescript/examples/: analyze-repo.ts
clients/typescript/src/: index.ts  kit.ts  types.ts
demos/ai_code_reviewer/: .env.example  README.md  main.py  requirements.txt
docs/: astro.config.mjs  chroma-cloud-setup.md  docs.json  index.mdx  mint.json  package-lock.json  package.json  pnpm-lock.yaml
docs/api/: summarizer.mdx
docs/core-concepts/: architecture.mdx  code-summarization.mdx  llm-context-best-practices.mdx  repository-api.mdx  semantic-search.mdx
docs/development/: running-tests.mdx
docs/introduction/: overview.mdx  quickstart.mdx  usage-guide.mdx
docs/src/: theme.css
docs/src/components/: Banner.astro  Card.astro
docs/src/styles/: custom.css  terminal-theme.css  theme.css
docs/tutorials/: ai_pr_reviewer.mdx  codebase_summarizer.mdx  dependency_graph_visualizer.mdx  dump_repo_map.mdx  integrating_supersonic.mdx  semantic_code_search.mdx
examples/test_flask_app/: app.py
examples/test_hcl_app/: main.tf
kit-mcp-site/: package-lock.json  package.json
kit-mcp-site/app/: globals.css  layout.tsx  page.tsx
kit-mcp-site/app/docs/: layout.tsx  page.tsx
kit-mcp-site/app/tools/: page.tsx
kit-mcp-site/components/: install-cursor-button.tsx
kit-mcp-site/public/: kit-optimize.sh
queries/go/: tags.scm
queries/hcl/: tags.scm
queries/python/: tags.scm
queries/rust/: tags.scm
queries/typescript/: tags.scm
scripts/: README.md  benchmark.py  format-ts.sh  format.sh  index.py  index_to_chroma.py  kit-cursor-helper.py  launch_mcp_inspector.sh  release.sh  test.sh  test_mcp_interactive.py  test_mcp_tools.py  test_ollama_local.py  test_package_search_real.py
src/kit/: __init__.py  ast_search.py  cache_backend.py  call_graph.py  cli.py  code_searcher.py  context7_client.py  context_extractor.py  deep_research.py  doc_providers.py  docstring_indexer.py  incremental_analyzer.py  llm_client_factory.py  llm_context.py  multi_repo.py  package_search.py  repo.py  repo_mapper.py  repository.py  summaries.py  tree_sitter_symbol_extractor.py  utils.py  vector_searcher.py
src/kit/api/: app.py  registry.py  repository_routes.py
src/kit/cache_backends/: filesystem.py  redis.py
src/kit/dependency_analyzer/: __init__.py  dependency_analyzer.py  rust_dependency_analyzer.py
src/kit/mcp/: __init__.py  __main__.py  dev.py  (+2 more)
tests/: conftest.py  golden_csharp.cs  test_api_security.py  test_arrow_function_symbols.py  test_base_reviewer.py  test_bash_symbols.py  test_chroma_cloud.py  test_cli_commands.py  test_cli_dependencies.py  test_cli_local_review.py  test_cli_parsing.py  test_cli_ref.py  test_cli_search_semantic.py  test_code_searcher.py  test_context_extractor.py  test_cross_file_impact.py  test_dev_mcp.py  test_diff_integration.py  test_diff_parser.py  test_docstring_incremental.py  test_docstring_indexer.py  test_error_utils.py  test_file_tree_subpath.py  test_gitignore.py  test_go_dependency_analyzer.py  test_golden_symbols.py  test_grep_functionality.py  test_grep_integration.py  test_haskell_symbol_extraction.py  test_hcl_symbols.py  test_high_issue_validator.py  test_java_symbols.py  test_line_accuracy_validation.py  test_line_ref_fix.py  test_llm_client_factory.py  test_llm_line_accuracy.py  test_local_diff_parsing.py  test_local_diff_review.py  test_local_review_edge_cases.py  test_local_review_scenarios.py  (+29 more)
tests/api/: test_repository_routes.py
tests/cache_backends/: test_redis_cache_backend.py
tests/integration/: test_humanlayer_repo.py
tests/mcp/: test_call_tool_content.py  test_grep_ast.py  test_package_search_mcp.py  test_review_diff.py  test_server.py
tests/perf/: __init__.py  test_dependency_perf.py
tutorials/: ai_pr_reviewer.md  automated_doc_gen.md  codebase_summarizer.md  dependency_graph_visualizer.md  dump_repo_map.md  semantic_code_search.md
(+119 files in other folders)
