[project]
name = "cased-kit"
version = "1.8.1"
description = "A modular toolkit for LLM-powered codebase understanding."
authors = [
    { name = "Cased", email = "ted@cased.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "tree-sitter-language-pack==0.7.3",
    "pathspec==0.12.1",
    "numpy==2.2.5",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.34.2",
    "typer==0.14.0",
    "click==8.1.8",
    "openai==1.78.1",
    "tiktoken==0.9.0",
    "anthropic==0.51.0",
    "google-genai==1.15.0",
    "python-hcl2==7.2.0",
    "mcp==1.8.1",
    "redis==5.3.0",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "async-timeout==5.0.1",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "google-auth==2.40.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jiter==0.9.0",
    "lark==1.2.2",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.9.1",
    "pygments==2.19.1",
    "pyjwt==2.9.0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "regex==2024.11.6",
    "rich==14.0.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sse-starlette==2.1.3",
    "starlette==0.36.3",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "tree-sitter==0.24.0",
    "tree-sitter-c-sharp==0.23.1",
    "tree-sitter-embedded-template==0.23.2",
    "tree-sitter-yaml==0.7.0",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.5",
    "websockets==15.0.1",
]

[project.urls]
Homepage = "https://github.com/cased/kit"

[project.scripts]
kit = "kit.cli:app"
kit-mcp = "kit.mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kit.queries" = ["*/*.scm"]
"kit" = ["queries/*/*/*.scm"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "ruff==0.11.9",
    "types-pyyaml==6.0.12.20250516",
    "types-requests==2.32.0.20250515",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "asyncio: mark test as asyncio to run with pytest-asyncio",
    "integration: marks tests as integration tests (may be slower)",
    "llm: marks tests that call LLM APIs (expensive, requires API keys)",
    "expensive: marks tests that are expensive/slow to run",
    "performance: marks tests that measure performance characteristics",
    "ci_skip: marks tests that should be skipped in CI environments",
]

[tool.mypy]
ignore_missing_imports = true

[project.optional-dependencies]
dev = [
    "build", # build wheels
    "twine",  # publish to PyPI
]
test-api = [
    "fastapi==0.110.0", # For TestClient
    "pytest==8.3.5" # Already in core, but good to list for a test group
]
ml = [
    "sentence-transformers>=2.2.0",  # For VectorSearcher and DocstringIndexer
    "chromadb>=0.5.23",  # Vector database for semantic search
]
all = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.5.23",
]

[tool.ruff]
# Set line length to 120 characters
line-length = 120
# Target Python 3.10 as specified in our requires-python
target-version = "py310"

# Configure linting
[tool.ruff.lint]
# Select these rule sets (categories)
select = ["E", "F", "W", "I", "RUF"]
ignore = []

# Configure isort rules
[tool.ruff.lint.isort]
known-first-party = ["kit", "cased_kit"]

# Configure formatter
[tool.ruff.format]
# Formatting uses line-length from the top level
